Implementing attendance tracking feature
- Added AttendanceRecord model with required properties
- Configured DbContext and applied migrations
- Implemented AddAttendance functionality in AttendanceController
- Created ViewModel (AttendanceReportViewModel) for attendance report
- Implemented AttendanceReport action in HomeController
- Updated Views for displaying attendance records and report
- Addressed various issues and errors during the development process

--- a/AttendanceRegister/appsettings.json
+++ b/AttendanceRegister/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Meso; Database=AttendanceRegister; Trusted_Connection=True; MultipleActiveResultSets=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +11,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
