--- a/AttendanceRegister/appsettings.json
+++ b/AttendanceRegister/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Meso; Database=AttendanceRegister; Trusted_Connection=True; MultipleActiveResultSets=True"
+    //"DefaultConnection": "Server=Meso; Database=AttendanceRegister; Trusted_Connection=True; MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=attendanceregisterdbserver.database.windows.net;Database=AttendanceRegister_db;User Id=Meso; Password=Qwerty@1;MultipleActiveResultSets=True;Trusted_Connection=False;Encrypt=True;"
+
   },
 
   "Logging": {
